# vitaliset.github.io

./: .gitignore  404.md  DEVELOPMENT.md  Gemfile  LICENSE.txt  README.md  _config.yml  about.md  about_PT.md  categories.md  cde_medium.md  contact.md  index.md  interview.md  jekyll-sleek.gemspec  links.md  package-lock.json  package.json  robots.txt  sobre.md  sw.js  tutoring-guideline.md
_includes/: about-body.html  analytics.html  anchors.html  card.html  disqus.html  footer.html  head.html  header.html  i18n.html
_layouts/: default.html  page.html  post.html
_pages/: about.md  gallery.md  interview.md  links.md  llm.md  sobre.md  tutoring-guideline.md
_posts/: 2016-01-01-my-first-ml-blog.md  2016-07-09-my-first-kaggle-competition.md  2017-11-21-ts-for-bernoulli-bandit.md  2017-11-28-ts-for-contextual-bandits.md  2018-01-29-ts-for-bayesian-optim.md  2018-04-22-ts-for-mushroom-bandit.md  2018-05-05-forest-embeddings.md  2018-05-29-non-stationary-bandits.md  2018-06-25-approximate-bayes-bandits.md  2018-07-24-risk-aware-bandits.md  2018-08-06-umap-supervised-embeddings.md  2018-09-11-probability-calibration.md  2018-11-19-treatment-effects.md  2019-03-29-causal-look-kaggler-valuable.md  2019-04-29-intro-randomized-prior-functions.md  2019-05-11-risk-and-uncertainty-deep-learning.md  2020-04-11-decision-tree-counterfactual.md  2020-05-23-forest-embeddings-counterfactual.md  2020-07-11-k-fold.md  (+28 more)
code/distance_metrics/: README.md  blog_distance_metrics_EN.ipynb  blog_distance_metrics_PT.ipynb  pyproject.toml
code/r_squared/: blog_r2_score_EN.ipynb  pyproject.toml
(+40 files in other folders)
